# digikam-photolayouteditor

./: .krazy  CMakeLists.txt  README.md  bootstrap-linux.sh
borderplugins/: PolaroidBorderDrawer.cpp  SolidBorderDrawer.cpp  StandardBordersFactory.cpp
borders/: BorderChangeListener.cpp  BordersGroup.cpp
cmake/modules/: PluginI18n.cmake
cmake/templates/: i18n.qrc.in_cmake
data/: CMakeLists.txt
data/TODO/Gradients/: README
data/templates/: CMakeLists.txt
data/templates/a4/h/: Border.ple
dplugin/: CMakeLists.txt  README.md  photolayoutseditorgenericplugin.cpp  photolayoutseditorgenericplugin.h  plugin_photolayoutseditor.cpp
effectplugins/: BlurPhotoEffect.cpp  ColorizePhotoEffect.cpp  GrayscalePhotoEffect.cpp  NegativePhotoEffect.cpp  SepiaPhotoEffect.cpp  StandardEffectsFactory.cpp
effects/: AbstractPhotoEffectInterface.h  PhotoEffectsGroup.cpp  PhotoEffectsLoader.cpp  PixelizePhotoEffect.cpp
extra/: PLEConfigSkeleton.h
extra/qtpropertybrowser/: qteditorfactory.cpp  qtpropertybrowserutils.cpp
i18n/: de.ts  i18n_list.cmake
main/: collage.cpp  main.cpp  photolayoutswindow.cpp  photolayoutswindow.h
models/: LayersModelItem.cpp
project/: clangscan.sh  clangtidy.sh  clazy.sh  clazy_visualizer.py  common.sh  cppcheck.sh  krazy.sh
project/tidy/: run-clang-tidy.py
res/: icons.qrc  photolayoutseditorui.rc
settings/: PLEConfigDialog.cpp  PLEConfigViewWidget.cpp
src/: .clang-tidy
src/borders/: BorderChangeListener.cpp  BorderChangeListener.h  BorderDrawerFactoryInterface.h  BorderDrawerInterface.cpp  BorderDrawerInterface.h  BorderDrawersLoader.cpp  BorderDrawersLoader.h  BordersGroup.cpp  BordersGroup.h  borderchangelistener.cpp  borderchangelistener.h  borderdrawerfactoryinterface.cpp  borderdrawerfactoryinterface.h  borderdrawerinterface.cpp  borderdrawerinterface.h  borderdrawersloader.cpp  borderdrawersloader.h  bordersgroup.cpp  bordersgroup.h
src/bordertools/: PolaroidBorderDrawer.cpp  PolaroidBorderDrawer.h  SolidBorderDrawer.cpp  SolidBorderDrawer.h  StandardBordersFactory.cpp  StandardBordersFactory.h
src/common/: i18nutils.h
src/effectplugins/: StandardEffectsFactory.cpp
src/effects/: AbstractPhotoEffectFactory.h  AbstractPhotoEffectInterface.cpp  AbstractPhotoEffectInterface.h  PhotoEffectChangeListener.cpp  PhotoEffectChangeListener.h  PhotoEffectsGroup.cpp  PhotoEffectsGroup.h  PhotoEffectsLoader.cpp  PhotoEffectsLoader.h  PixelizePhotoEffect.cpp  PixelizePhotoEffect.h  abstractphotoeffectfactory.cpp  abstractphotoeffectfactory.h  abstractphotoeffectinterface.cpp  abstractphotoeffectinterface.h  photoeffectchangelistener.cpp  photoeffectchangelistener.h  photoeffectsgroup.cpp  photoeffectsgroup.h  photoeffectsloader.cpp  photoeffectsloader.h  pixelizephotoeffect.cpp  pixelizephotoeffect.h
src/effecttools/: BlurPhotoEffect.cpp  BlurPhotoEffect.h  ColorizePhotoEffect.cpp  ColorizePhotoEffect.h  GrayscalePhotoEffect.cpp  GrayscalePhotoEffect.h  NegativePhotoEffect.cpp  NegativePhotoEffect.h  SepiaPhotoEffect.cpp  SepiaPhotoEffect.h  StandardEffectsFactory.cpp  StandardEffectsFactory.h
src/events/: ProgressEvent.cpp  ProgressEvent.h  UndoCommandEvent.cpp  UndoCommandEvent.h  UndoCommandEventFilter.cpp  UndoCommandEventFilter.h
src/extra/: KEditFactory.cpp  KEditFactory.h  global.cpp  global.h  ple_global.cpp  pleeditfactory.cpp  pleeditfactory.h  pleglobal.cpp  pleglobal.h  qeditfactory.cpp  qeditfactory.h
src/listeners/: TextColorChangeListener.cpp  TextColorChangeListener.h  TextFontChangeListener.cpp  TextFontChangeListener.h
src/models/: AbstractMovableModel.cpp  AbstractMovableModel.h  LayersModel.cpp  LayersModel.h  LayersModelItem.cpp  LayersModelItem.h  LayersSelectionModel.cpp  LayersSelectionModel.h
src/settings/: PLEConfigDialog.cpp  PLEConfigDialog.h  PLEConfigViewWidget.cpp  PLEConfigViewWidget.h
src/threads/: AbstractPhotoItemLoader.cpp  AbstractPhotoItemLoader.h  CanvasLoadingThread.cpp  CanvasLoadingThread.h  CanvasSavingThread.cpp  CanvasSavingThread.h  ImageLoadingThread.cpp  ImageLoadingThread.h  PhotoItemLoader.cpp  PhotoItemLoader.h  ProgressEvent.cpp  ProgressEvent.h  ProgressObserver.h  SavingThread.cpp  SavingThread.h  SceneBackgroundLoader.cpp  SceneBackgroundLoader.h  SceneBorderLoader.cpp  SceneBorderLoader.h  TextItemLoader.cpp  TextItemLoader.h  abstractphotoitemloader.cpp  abstractphotoitemloader.h  imageloadingthread.cpp  imageloadingthread.h  photoitemloader.cpp  photoitemloader.h  plecanvasloadingthread.cpp  plecanvasloadingthread.h  plecanvassavingthread.cpp  plecanvassavingthread.h  plescenebackgroundloader.cpp  plescenebackgroundloader.h  plesceneborderloader.cpp  plesceneborderloader.h  progressevent.cpp  progressevent.h  progressobserver.h  textitemloader.cpp  textitemloader.h
src/undo/: UndoBorderChangeCommand.cpp  UndoBorderChangeCommand.h  UndoCommandEvent.cpp  UndoCommandEvent.h  UndoCommandEventFilter.cpp  UndoCommandEventFilter.h  UndoMoveRowsCommand.cpp  UndoMoveRowsCommand.h  UndoRemoveItem.cpp  UndoRemoveItem.h  undoborderchangecommand.cpp  undoborderchangecommand.h  undocommandevent.cpp  undocommandevent.h  undocommandeventfilter.cpp  undocommandeventfilter.h  undomoverowscommand.cpp  undomoverowscommand.h  undoremoveitem.cpp  undoremoveitem.h
threads/: AbstractPhotoItemLoader.cpp  CanvasLoadingThread.cpp  CanvasSavingThread.cpp  ImageLoadingThread.cpp  PhotoItemLoader.cpp  TextItemLoader.cpp
undo/: UndoBorderChangeCommand.cpp  UndoMoveRowsCommand.cpp  UndoRemoveItem.cpp
widgets/canvas/: Canvas.cpp  CropWidgetItem.cpp  RotationWidgetItem.cpp  ScalingWidgetItem.cpp  Scene.cpp  Scene.h  SceneBackground.cpp  SceneBorder.cpp
widgets/dialogs/: CanvasSizeDialog.cpp  CanvasSizeWidget.cpp  GridSetupDialog.cpp  NewCanvasDialog.cpp
widgets/items/: AbstractPhoto.cpp  PhotoItem.cpp  TextItem.cpp
widgets/layers/: LayersTreeTitleWidget.h
widgets/menus/: LayersTreeMenu.cpp
widgets/tools/: AbstractItemsListViewTool.cpp  BorderEditTool.cpp  BorderEditTool.h  CanvasEditTool.cpp  EffectsEditorTool.cpp  TextEditorTool.cpp  ToolsDockWidget.cpp  ZoomTool.cpp
(+227 files in other folders)
